--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ rand_distr = "0.2.2"
 rand = "0.7.3"
 nalgebra = "0.19.0"
 fnv = "1.0.3"
+serde_json = "1.0"
+serde_yaml = "0.8"
+serde = { version = "1.0", features = ["derive"] }
