--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ edition = "2018"
 petgraph = "0.5.0"
 rand_distr = "0.2.2"
 rand = "0.7.3"
-nalgebra = "0.19.0"
+nalgebra = { version = "0.19.0", features = ["serde-serialize"] }
 fnv = "1.0.3"
 serde_json = "1.0"
 serde_yaml = "0.8"
 serde = { version = "1.0", features = ["derive"] }
+pbr = "1.0.1"
+chrono = "0.4"
