--- a/config.yaml
+++ b/config.yaml
@@ -5,6 +5,7 @@ SIMULATION:
     GRAVITY_STRETCH: 100
     MAX_INFLUENCE: 0.1
     SUBSCRIPTION_PROB_WEIGHT: 0.1
+    CONTENT_SAMPLE_SIZE: 50
     PUBLISHER:
         REVENUE_PER_SUBSCRIBER: 0.01
         BASE_BUDGET: 10
