introduce contact rates, so agents don't always share offline

--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ DEBUG: true
 SIMULATION:
     POPULATION: 1000
     N_PUBLISHERS: 10
+    CONTACT_RATE: 0.1
     GRAVITY_STRETCH: 100
     MAX_INFLUENCE: 0.1
     SUBSCRIPTION_PROB_WEIGHT: 0.1
