--- a/config.yaml
+++ b/config.yaml
@@ -9,6 +9,7 @@ SIMULATION:
     SUBSCRIPTION_PROB_WEIGHT: 0.1
     CONTENT_SAMPLE_SIZE: 50
     BASE_SIGNUP_RATE: 0.001
+    DATA_PER_CONSUME: 0.0001
     PUBLISHER:
         REVENUE_PER_SUBSCRIBER: 0.01
         BASE_BUDGET: 10
