--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ SIMULATION:
     CONTENT_SAMPLE_SIZE: 50
     BASE_SIGNUP_RATE: 0.001
     DATA_PER_CONSUME: 0.0001
+    MAX_PLATFORMS: 3
     PUBLISHER:
         REVENUE_PER_SUBSCRIBER: 0.01
         BASE_BUDGET: 10
