parameterized unfollowing trust threshold

--- a/config.yaml
+++ b/config.yaml
@@ -13,6 +13,7 @@ SIMULATION:
     REVENUE_PER_AD: 0.001
     MAX_PLATFORMS: 3
     CHANGE_RATE: 0.1
+    UNFOLLOW_TRUST: 0.1
     PUBLISHER:
         REVENUE_PER_SUBSCRIBER: 0.01
         BASE_BUDGET: 10
