added follow trust threshold

--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,7 @@ SIMULATION:
     MAX_PLATFORMS: 3
     CHANGE_RATE: 0.1
     UNFOLLOW_TRUST: 0.1
+    FOLLOW_TRUST: 0.9
     PUBLISHER:
         REVENUE_PER_SUBSCRIBER: 0.01
         BASE_BUDGET: 10
