agent attention budget added as config param

--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,7 @@ SIMULATION:
     CONTACT_RATE: 0.1
     GRAVITY_STRETCH: 100
     MAX_INFLUENCE: 0.1
+    ATTENTION_BUDGET: 100
     SUBSCRIPTION_PROB_WEIGHT: 0.1
     CONTENT_SAMPLE_SIZE: 50
     BASE_SIGNUP_RATE: 0.001
