--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,6 @@ SIMULATION:
     GRAVITY_STRETCH: 100
     MAX_INFLUENCE: 0.1
     ATTENTION_BUDGET: 100
-    SUBSCRIPTION_PROB_WEIGHT: 0.1
     CONTENT_SAMPLE_SIZE: 50
     BASE_SIGNUP_RATE: 0.001
     DATA_PER_CONSUME: 0.0001
@@ -16,6 +15,9 @@ SIMULATION:
     CHANGE_RATE: 0.1
     UNFOLLOW_TRUST: 0.1
     FOLLOW_TRUST: 0.9
+    UNSUBSCRIBE_TRUST: 0.1
+    SUBSCRIBE_TRUST: 0.9
+    UNSUBSCRIBE_LAG: 20
     PUBLISHER:
         REVENUE_PER_SUBSCRIBER: 0.01
         BASE_BUDGET: 10
