added publisher and platform conversion rates, latter based on data collected

--- a/config.yaml
+++ b/config.yaml
@@ -18,6 +18,8 @@ SIMULATION:
     UNSUBSCRIBE_TRUST: 0.1
     SUBSCRIBE_TRUST: 0.9
     UNSUBSCRIBE_LAG: 20
+    BASE_CONVERSION_RATE: 0.01
+    MAX_CONVERSION_RATE: 0.05
     PUBLISHER:
         REVENUE_PER_SUBSCRIBER: 0.01
         BASE_BUDGET: 10
