marginal performance improvements, plus max shared content limit to prevent explosion in content

--- a/config.yaml
+++ b/config.yaml
@@ -20,6 +20,7 @@ SIMULATION:
     UNSUBSCRIBE_LAG: 20
     BASE_CONVERSION_RATE: 0.01
     MAX_CONVERSION_RATE: 0.05
+    MAX_SHARED_CONTENT: 200
     PUBLISHER:
         REVENUE_PER_SUBSCRIBER: 0.01
         BASE_BUDGET: 10
