--- a/config.yaml
+++ b/config.yaml
@@ -21,6 +21,7 @@ SIMULATION:
     BASE_CONVERSION_RATE: 0.01
     MAX_CONVERSION_RATE: 0.05
     MAX_SHARED_CONTENT: 200
+    COST_PER_QUALITY: 0.2
     PUBLISHER:
         REVENUE_PER_SUBSCRIBER: 1000
         BASE_BUDGET: 50000
