--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,7 @@ strum_macros = "0.15.0"
 itertools = "0.8.2"
 uuid = { version = "0.8", features = ["v4"] }
 bandit = "0.12.1"
+
+# Temporary, for profiling
+/* [profile.release] */
+/* debug = true */
