--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,6 @@ SIMULATION:
     CONTACT_RATE: 0.1
     GRAVITY_STRETCH: 100
     MAX_INFLUENCE: 0.1
-    ATTENTION_BUDGET: 100
     CONTENT_SAMPLE_SIZE: 50
     BASE_SIGNUP_RATE: 0.001
     DATA_PER_CONSUME: 0.0001
@@ -25,3 +24,5 @@ SIMULATION:
     PUBLISHER:
         REVENUE_PER_SUBSCRIBER: 1000
         BASE_BUDGET: 50000
+    AGENT:
+        ATTENTION_BUDGET: 100
