--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,7 @@ SIMULATION:
     DATA_PER_CONSUME: 0.0001
     REVENUE_PER_AD: 0.001
     MAX_PLATFORMS: 3
+    DEFAULT_TRUST: 0.4
     UNFOLLOW_TRUST: 0.1
     FOLLOW_TRUST: 0.9
     UNSUBSCRIBE_TRUST: 0.1
