--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-petgraph = "0.5.0"
 rand_distr = "0.2.2"
 rand = "0.7.3"
 nalgebra = { version = "0.19.0", features = ["serde-serialize"] }
@@ -24,5 +23,5 @@ itertools = "0.8.2"
 uuid = { version = "0.8", features = ["v4"] }
 
 # Temporary, for profiling
-# [profile.release]
-# debug = true
+[profile.release]
+debug = true
