--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ strum = "0.15.0"
 strum_macros = "0.15.0"
 itertools = "0.8.2"
 uuid = { version = "0.8", features = ["v4"] }
+rayon = "1.3.0"
 
 # Temporary, for profiling
 [profile.release]
