economic recession shock

--- a/config.yaml
+++ b/config.yaml
@@ -22,6 +22,7 @@ SIMULATION:
     MAX_CONVERSION_RATE: 0.05
     MAX_SHARED_CONTENT: 200
     COST_PER_QUALITY: 0.5
+    ECONOMY: 1.
     PUBLISHER:
         REVENUE_PER_SUBSCRIBER: 0.01
         BASE_BUDGET: 2000
